--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -5,6 +5,6 @@ jobs:
   my_build: 
     runs-on: ubuntu-latest
     steps:
-      - run: |
+      run: |
         echo "Hello"
         echo "World"
