publish on release

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,9 @@ on:
         description: 'Add a tag.'
         default: ''
         required: false
-        
+  release:
+    types: [created]
+    
 jobs: 
   build: 
     runs-on: ubuntu-latest
